<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>tailor</groupId>
  <artifactId>tailor</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
         <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
       <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.12</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>commons-cli</groupId>
  		<artifactId>commons-cli</artifactId>
  		<version>1.2</version>
  	</dependency>
	<dependency>
		<groupId>net.sourceforge.jmol</groupId>
		<artifactId>jmol</artifactId>
		<version>14.6.4_2016.10.21</version>
	</dependency>
      <!-- https://mvnrepository.com/artifact/javax.vecmath/vecmath -->
      <dependency>
          <groupId>javax.vecmath</groupId>
          <artifactId>vecmath</artifactId>
          <version>1.5.2</version>
      </dependency>
  </dependencies>
</project>